# knn-kolmogorov

./: .clang-format  .gitignore  CMakeLists.txt  README.md  folders.cmake  targets.cmake  valgrind-out.txt  vcpkg.cmake  vcpkg.json  workspace.code-workspace
apps/: CMakeLists.txt  knn.c
apps/KNN-PREDICT/: CMakeLists.txt  knn.c
cmake/: folders.cmake  targets.cmake
includes/agnewsloader/inc/: agnewsloader.h
includes/agnewsloader/src/: agnewsloader.c
includes/algorithms/knn/: CMakeLists.txt
includes/algorithms/knn/inc/: knn.h
includes/algorithms/knn/src/: knn.c
includes/category-handler/: CMakeLists.txt
includes/category-handler/inc/: category-handler.h
includes/category-handler/src/: category-handler.c
includes/data-handler/: CMakeLists.txt
includes/data-handler/inc/: data-handler.h
includes/data-handler/src/: data-handler.c
includes/kd-tree/: CMakeLists.txt
includes/kd-tree/inc/: kd-handler.h
includes/kd-tree/src/: kd-handler.c
includes/models/: CMakeLists.txt
includes/models/inc/: models.h
lib/agnewsloader/: CMakeLists.txt
lib/agnewsloader/inc/: agnewsloader.h
lib/agnewsloader/src/: agnewsloader.c
lib/algorithms/: CMakeLists.txt
lib/algorithms/knn/: CMakeLists.txt
lib/algorithms/knn/inc/: knn.h
lib/algorithms/knn/src/: knn.c
lib/models/: CMakeLists.txt
lib/models/inc/: model.colors.h  model.dataset.h  model.distancePoint.h  model.klass_predictor.h  model.knn.h  model.kp_state.h  model.logging.h  model.point.h  model.queue.h  model.thread_message.h  models.h
lib/models/src/: model.dataset.c  model.distancePoint.c  model.klass_predictor.c  model.knn.c  model.kp_state.c  model.point.c  model.queue.c  model.thread_message.c
src/app/: CMakeLists.txt
src/app/src/: knn.c
